--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,8 @@
 <div class="jumbotron centered">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Confessions</h1>
-    <p class="lead">Do your Confessions, share them anonymously!</p>
+    <h1 class="display-3">Random Acts of Kindness</h1>
+    <p class="lead">Share your Acts of Kindness, inspire others anonymously!</p>
     <hr>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
