--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -3,7 +3,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Here people confess their feelings!</h1>
+    <h1 class="display-3">Spread Kindness Anonymously!</h1>
     <% usersWithSecrets.forEach(function(user){ %>
       <p class="secret-text"><%= user.secret %></p>
     <%})%>
@@ -11,7 +11,7 @@
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-    <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+    <a class="btn btn-dark btn-lg" href="/submit" role="button">Share an Act of Kindness</a>
   </div>
 </div>
 
