--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -3,8 +3,9 @@
 <div class="container">
   <div class="jumbotron centered">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Confessions</h1>
-    <p class="secret-text">Do your Confessions, share them anonymously!</p>
+    <h1 class="display-3">Random Acts of Kindness</h1>
+    <p class="lead">Share your Acts of Kindness, inspire others anonymously!</p>
+
 
     <form action="/submit" method="POST">
 
