--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -10,7 +10,7 @@
     <form action="/submit" method="POST">
 
       <div class="form-group">
-        <input type="text" class="form-control text-center" name="secret" placeholder="What's your Confession?">
+        <input type="text" class="form-control text-center" name="secret" placeholder="Share your Act of Kindness" autocomplete="off">
       </div>
       <button type="submit" class="btn btn-dark">Submit</button>
     </form>
