--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
 body {
-  background: #F7F8F8;
+  background: #D7BBF5;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #78bbba, #F7F8F8);
+  background: -webkit-linear-gradient(to right, #D7BBF5, #FBA1B7);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #78bbba, #F7F8F8);
+  background: linear-gradient(to right, #D7BBF5, #FBA1B7);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  font-family: "Playfair Display";
+  font-family: "Quicksand", sans-serif;
 }
 
 .centered {
@@ -30,10 +32,10 @@ body {
 }
 
 .jumbotron {
-  background: #F7F8F8;
+  background: #FBA1B7;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #78bbba, #F7F8F8);
+  background: -webkit-linear-gradient(to right, #D7BBF5, #FBA1B7);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #78bbba, #F7F8F8);
+  background: linear-gradient(to right, #D7BBF5, #FBA1B7);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
