--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -9,7 +9,13 @@
     <%})%>
 
     <hr>
-    
+    <script>
+      window.onload = function(){
+        console.log("hi");
+        document.getElementById("bgm").play();
+      }
+    </script>
+    <audio id="bgm" src="bgm.mp3"></audio>
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
     <a class="btn btn-dark btn-lg" href="/submit" role="button">Share an Act of Kindness</a>
   </div>
