--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -10,7 +10,7 @@
 
     <hr>
     <script>
-      window.onload = function(){
+      window.onclick = function(){
         console.log("hi");
         document.getElementById("bgm").play();
       }
