--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 
   <div class="row">
     <div class="col-sm-8">
-      <div class="card">
+      <div class="card gradient-bg">
         <div class="card-body">
 
           <!-- Makes POST request to /register route -->
@@ -25,7 +25,7 @@
     </div>
 
     <div class="col-sm-4">
-      <div class="card social-block">
+      <div class="card social-block gradient-bg1">
         <div class="card-body">
           <a class="btn btn-block" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
